sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:14: error: not found: value echangeFait
  } while(ecart > 1 || echangeFait)
                       ^